[修改] 更新 user controller
